# Dataplatforms_ML_AI_eyoub_beraki_de_24

./: .gitignore  pyproject.toml
03_gemini/: gemini_api.ipynb
04_pydantic/: pydantic.ipynb
05_pydantic_gemini/: b_gemini_pydantic._more_robust.ipynb
06_fastapi_crud/: api.py  data_processing.py
07_a_pydantic_ai/: pydanticai_fundamentals.ipynb
07_b_pydantic_fastapi/: setup_db.py  utils.py
07_b_pydantic_fastapi/data/: movies.duckdb
07_pydantic_ai/: pydanticai_fundamentals.ipynb
