[project]
name = "dp-ml-ai-eyoub-beraki-de-24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "google-genai>=1.51.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic-ai>=1.24.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
]
